--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Babel-React-Webpack starter with Bootstrap",
+  "name": "Babel-React-Webpack-Bootstrap-Starter",
   "version": "1.0.0",
   "description": "Just a personal starter pack for projects using these libraries/etc.",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "babel": "^6.23.0",
     "babel-loader": "^8.0.5",
     "eslint": "^5.12.1",
     "react-hot-loader": "^4.6.3",
@@ -22,7 +23,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   }
 }
