--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^3.2.0",
     "eslint": "^5.12.1",
     "react-hot-loader": "^4.6.3",
+    "style-loader": "^1.0.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
