--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
   "author": "Joseph Antolick",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.6.0",
-    "react-hot-loader": "^4.12.15",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
+    "css-loader": "^3.4.0",
+    "eslint": "^6.8.0",
+    "react-hot-loader": "^4.12.18",
+    "style-loader": "^1.1.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "@babel/polyfill": "^7.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   }
 }
